--- a/css/box.css
+++ b/css/box.css
@@ -1,7 +1,9 @@
 
 body {
 
-    background: linear-gradient(#141e30, #243b55);
+    background: linear-gradient(#0a0a29, #33000f);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 .login-box {
@@ -96,14 +98,7 @@ body {
     animation: btn-anim1 1s linear infinite;
 }
 
-@keyframes btn-anim1 {
-    0% {
-        left: -100%;
-    }
-    50%,100% {
-        left: 100%;
-    }
-}
+
 
 .login-box a span:nth-child(2) {
     top: -100%;
@@ -115,14 +110,7 @@ body {
     animation-delay: .25s
 }
 
-@keyframes btn-anim2 {
-    0% {
-        top: -100%;
-    }
-    50%,100% {
-        top: 100%;
-    }
-}
+
 
 .login-box a span:nth-child(3) {
     bottom: 0;
@@ -134,14 +122,7 @@ body {
     animation-delay: .5s
 }
 
-@keyframes btn-anim3 {
-    0% {
-        right: -100%;
-    }
-    50%,100% {
-        right: 100%;
-    }
-}
+
 
 .login-box a span:nth-child(4) {
     bottom: -100%;
@@ -153,11 +134,4 @@ body {
     animation-delay: .75s
 }
 
-@keyframes btn-anim4 {
-    0% {
-        bottom: -100%;
-    }
-    50%,100% {
-        bottom: 100%;
-    }
-}
+
