--- a/css/login.css
+++ b/css/login.css
@@ -120,3 +120,21 @@ button{
 .social i{
     margin-right: 4px;
 }
+
+
+h1 {
+    color: black;
+    Font: 16px "Microsoft YaHei", "ptsans", "Arial", sans serif;
+    text-align: center;
+    background-color: #33000f;
+    border-radius: 6px 6px 6px 6px;
+    box-shadow: 0 0 0 1px #5F5A4B, 1px 1px 6px 1px rgba(10, 10, 0, 0.5);
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: bold;
+    height: 25px;
+    line-height: 25px;
+    margin: 11px 0 !important;
+
+    text-shadow: 2px 2px 3px #222222;
+}
